# COMMS-SW

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CheckGit.cmake  README.md  STM32H743VITx.ld  STM32H743VITx_FLASH.ld  comms-sw.ioc  eqm-comms-sw.ioc  git_version.h  open_ocd_config_stm32h743.cfg  parameter_database.xlsx
.github/ISSUE_TEMPLATE/: comms-basic-template.md  comms-drivers-template.md
.github/workflows/: update-task-progress.yml
Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
Drivers/AT86RF215/Inc/: at86rf215.hpp  at86rf215config.hpp
Drivers/CAN/: CMakeLists.txt
Drivers/CAN/Inc/: CANDriver.hpp  (+9 more)
Drivers/GNSS/: CMakeLists.txt
Drivers/INA3221/: CMakeLists.txt
Drivers/TMP117/: CMakeLists.txt
Drivers/eMMC/: CMakeLists.txt
ECSS/Inc/: ECSS_Definitions.hpp  Message.hpp
Lib/ecss-services/: CMakeLists.txt
Lib/ecss-services/inc/: CMakeLists.txt  COMMS_ECSS_Configuration.hpp  ECSS_Definitions.hpp  ErrorHandler.hpp  Message.hpp  MessageParser.hpp  Service.hpp  ServicePool.hpp
Lib/ecss-services/inc/Helpers/: AllReportTypes.hpp  CMakeLists.txt  FilepathValidators.hpp  ForwardControlConfiguration.hpp  HousekeepingStructure.hpp  LazyParameter.hpp  PMON.hpp  PacketStore.hpp  Statistic.hpp  TimeGetter.hpp  TypeDefinitions.hpp
Lib/ecss-services/inc/Services/: CMakeLists.txt  EventActionService.hpp  FileManagementService.hpp  FunctionManagementService.hpp  HousekeepingService.hpp  MemoryManagementService.hpp  OnBoardMonitoringService.hpp  ParameterService.hpp  ParameterStatisticsService.hpp  RealTimeForwardingControlService.hpp  RequestVerificationService.hpp  StorageAndRetrievalService.hpp  TimeBasedSchedulingService.hpp
Lib/ecss-services/inc/Time/: CMakeLists.txt  Time.hpp  TimeStamp.hpp  UTCTimestamp.hpp
Lib/ecss-services/inc/etl/: String.hpp
Lib/ecss-services/src/: ErrorHandler.cpp  MessageParser.cpp  Service.cpp
Lib/ecss-services/src/Helpers/: AllReportTypes.cpp  CRCHelper.cpp  FilepathValidators.cpp  Filesystem.cpp  PMON.cpp  PacketStore.cpp  Statistic.cpp
Lib/ecss-services/src/Services/: EventActionService.cpp  EventReportService.cpp  FileManagementService.cpp  FunctionManagementService.cpp  HousekeepingService.cpp  LargePacketTransferService.cpp  MemoryManagementService.cpp  OnBoardMonitoringService.cpp  ParameterService.cpp  ParameterStatisticsService.cpp  RealTimeForwardingControlService.cpp  RequestVerificationService.cpp  StorageAndRetrievalService.cpp  TestService.cpp  TimeBasedSchedulingService.cpp
Lib/ecss-services/src/Time/: UTCTimestamp.cpp
Lib/logger-main-c6abda2e/: CMakeLists.txt
app/: CMakeLists.txt  app_main.cpp  app_main.h
app/FreeRTOSTasks/: CMakeLists.txt
app/FreeRTOSTasks/Inc/: CANGatekeeperTask.hpp  CANParserTask.hpp  CANTestTask.hpp  CMakeLists.txt  GNSSTask.hpp  HeartbeatTask.hpp  INA3221Task.hpp  RF_RXTask.hpp  RF_TXTask.hpp  TCHandlingTask.hpp  TMHandlingTask.hpp  TMP117Task.hpp  TMParserTask.hpp  Task.hpp  TaskConfigs.hpp  TestTask.hpp  TransceiverTask.hpp  UARTGatekeeperTask.hpp  eMMCTask.hpp
app/FreeRTOSTasks/Src/: CANGatekeeperTask.cpp  CANParserTask.cpp  CANTestTask.cpp  GNSSTask.cpp  HeartbeatTask.cpp  INA3221Task.cpp  RF_RXTask.cpp  RF_TXTask.cpp  TCHandlingTask.cpp  TMHandlingTask.cpp  TMP117Task.cpp  TMParserTask.cpp  TestTask.cpp  TransceiverTask.cpp  UARTGatekeeper.cpp  eMMCTask.cpp
app/Platform/: CMakeLists.txt  parameter_database.xlsx  prameter_database.xlsx  update_database.py
app/Platform/Inc/: CMakeLists.txt  COBS.hpp  FunctionManagementWrappers.hpp  PlatformParameters.hpp  cobs.h
app/Platform/Src/: ErrorHandler.cpp  ErrorHandlerTemplates.cpp  FunctionManagementWrappers.cpp  PlatformParameters.cpp  Service.cpp  cobs.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
(+28 files in other folders)
